--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,9 @@
 ---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+import { email } from '../../src/globals';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 const currentYear = new Date().getFullYear()
 ---
 
@@ -8,19 +13,18 @@ const currentYear = new Date().getFullYear()
   <div
     class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
   >
-    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
-      >© {currentYear}
-    Portfolio realizado gracias a las aportaciones de <a href="https://midu.dev/" class="hover:underline">Midudev</a></span
-    </span>
+    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"> © {currentYear}
+      <p set:html={t('footer.copy')}></p>
+  </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">{t('nav.about')}</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:adangrx@gmail.com" class="hover:underline"
-          >Contacto</a
+        <a id="contacto" href={`mailto:${email}`} class="hover:underline"
+          >{t('nav.contact')}</a
         >
       </li>
     </ul>
