--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,10 +11,12 @@ interface Props {
 }
 
 const { description, title } = Astro.props
+
+const { currentLocale } = Astro
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang={currentLocale}>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
