--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,14 @@
 ---
-const personalImageAlt = "Adán Gonzalez"
-import Badge from "@/components/Badge.astro"
-import LinkedInIcon from "@/components/icons/LinkedIn.astro"
-import MailIcon from "@/components/icons/Mail.astro"
-import SocialPill from "@/components/SocialPill.astro"
+const personalImageAlt = "Adán Gonzalez";
+import Badge from "@/components/Badge.astro";
+import LinkedInIcon from "@/components/icons/LinkedIn.astro";
+import MailIcon from "@/components/icons/Mail.astro";
+import SocialPill from "@/components/SocialPill.astro";
+import { getLangFromUrl, useTranslations } from "../i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const currentYear = new Date().getFullYear();
 ---
 
 <div class="max-w-xl">
@@ -19,29 +24,26 @@ import SocialPill from "@/components/SocialPill.astro"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
     >
-      <Badge>Open to work</Badge>
+      <Badge>{t("about.open")}</Badge>
     </a>
   </div>
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, I´m Adán
+    {t("about.hey")}
   </h1>
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
-  >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Apasionado por la Programación con Ruby, Python y Javascript</strong
-    > Nacido y criado en Canarias 🇪🇸. Especializado en trabajo en remoto. Mi pasión es la optimización y reparar elementos imposibles. Los retos son mi pasión
-  </p>
+    set:html={t("about.me")}
+  />
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:adangrx@gmail.com">
       <MailIcon class="size-4" />
-      Contáctame
+      {t("about.contact")}
     </SocialPill>
     <SocialPill href="https://www.linkedin.com/in/adangr">
       <LinkedInIcon class="size-4" />
-      LinkedIn
+      {t("about.linkedin")}
     </SocialPill>
   </nav>
 </div>
