--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const { currentLocale } = Astro
 
 const navItems = [
   {
-    title: t('nav.home'),
+    title: t('nav.experience'),
     label: "experiencia",
     url: currentLocale === 'en' ? '/en#experiencia' : '/#experiencia',
   },
