--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,7 +7,7 @@ const personalImageAlt = "Adán González - Desarrollador Web Full Stack";
 ---
 
 <article
-  class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
+  class="flex flex-col items-top justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
 >
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
