--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -38,7 +38,7 @@ const TAGS: TagsType = {
   },
   tailwindcss: {
     name: "Tailwind CSS",
-    class: "bg-[#003159] text-white",
+    class: "bg-white text-black",
     icon: Tailwind
   },
   rspec: {
@@ -102,7 +102,7 @@ const PROJECTS:ProjectType[] = t('projects');
 
 <div class="flex flex-col gap-y-16">
   {
-    PROJECTS.map(({ image, title, description, tags, link, github }) => (
+    PROJECTS.map(({ title, description, tags, link, github }) => (
   <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
   <div class="w-full">
     <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">
