--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -1,10 +1,7 @@
 ---
-import GitHub from "./icons/GitHub.astro";
 import NextJS from "./icons/NextJS.astro";
 import Tailwind from "./icons/Tailwind.astro";
 import Ruby from "./icons/Ruby.astro";
-import Link from "./icons/Link.astro";
-import LinkButton from "./LinkButton.astro";
 import Rspec from "./icons/Rspec.astro";
 import Docker from "./icons/Docker.astro";
 import Gitlab from "./icons/Gitlab.astro";
@@ -71,6 +68,5 @@ const TAGS = {
     icon: Expo,
   },
 };
----
 
-export default TAGS;
+TAGS;
