update texts and images

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,8 +13,8 @@ const t = useTranslations(lang);
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img
-      class="rounded-full shadow-lg w-20 h-20 object-cover object-top"
-      src="/adan.webp"
+      class="rounded-full shadow-lg w-24 h-24 object-cover object-top"
+      src="/adan.png"
       alt={personalImageAlt}
     />
     <a
