--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const navItems = [
   class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
   <nav
-    class="flex px-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center"
+    class="flex px-3 text-sm font-small rounded-full text-gray-600 dark:text-gray-200 justify-center items-center md:text-sm lg:text-sm sm:text-xs xs:text-xs"
   >
   {
     navItems.map((link) => (
