--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import "@fontsource-variable/onest"
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import { ViewTransitions } from "astro:transitions"
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 interface Props {
   title: string
@@ -28,6 +29,7 @@ const { currentLocale } = Astro
   </head>
 
   <body class="relative text-black dark:text-white">
+    <SpeedInsights/>
     <div
       class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-gray-950
       bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
