--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,6 +3,7 @@ const personalImageAlt = "Adán Gonzalez";
 import Badge from "@/components/Badge.astro";
 import LinkedInIcon from "@/components/icons/LinkedIn.astro";
 import MailIcon from "@/components/icons/Mail.astro";
+import GitHubIcon from "@/components/icons/GitHub.astro";
 import SocialPill from "@/components/SocialPill.astro";
 import ProfileCheck from "./icons/ProfileCheck.astro";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
@@ -49,5 +50,17 @@ const t = useTranslations(lang);
       <ProfileCheck class="size-4" />
       {t("about.cv")}
     </SocialPill>
+    <SocialPill href="https://github.com/adansuku">
+      <GitHubIcon class="size-4" />
+      Github
+    </SocialPill>
   </nav>
+  <h2
+  class="text-2xl font-bold tracking-tight text-gray-800 sm:text-2xl dark:text-white mt-6"
+  set:html={t('about.find_title')}
+  />
+  <p
+  class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-400 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+  set:html={t("about.find")}
+  />
 </div>
